# unison-protocol

./: .gitignore  .mcp.json  AI_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  PROTOCOL_SPEC.md  README.en.md  README.md  SECURITY.ja.md  SECURITY.md  build.rs  build_certs.rs  deny.toml  test_kdl.rs
.claude/: settings.local.json  worktree-guide.md
.claude/devtools/: README.md  SKILL.md
.claude/devtools/examples/: chrome-mcp-dashboard-test.md  mise-config.toml
.claude/devtools/reference/: chrome-devtools-mcp-reference.md  mise-reference.md
.claude/document-skills/: SKILL.md
.claude/gandi/: SKILL.md
.claude/gandi/reference/: api_basics.md  common_patterns.md  dns_records.md  domain_management.md  email_management.md  ssl_certificates.md
.claude/github/: README.md  SKILL.md
.claude/github/examples/: resolve-conflict.md
.claude/github/reference/: conflict-resolution.md  gh-commands.md
.claude/hearing-first/: SKILL.md
.claude/physical-event/: SKILL.md
.claude/qdrant/: README.md  SKILL.md
.claude/skills/: developer.md
.claude/skills/zed-editor/spec/: acp-technical-spec.md
.claude/sycamore/: SKILL.md
.claude/sycamore/examples/: dashboard.md
.claude/sycamore/patterns/: ui_patterns.md
.claude/sycamore/reference/: getting_started.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
assets/certs/: README.md
benches/: quic_performance.rs  throughput.rs
crates/unison/: build.rs
crates/unison-agent/: Cargo.toml  README.md
crates/unison-agent/examples/: batch_query.rs  interactive_chat.rs  simple_query.rs  unison_direct_demo.rs  unison_mcp_demo.rs
crates/unison-agent/src/: agent.rs  client.rs  error.rs  lib.rs  tools.rs
crates/unison-cli/: Cargo.toml  README.md
crates/unison-network/: Cargo.toml  README.md
crates/unison-protocol/: Cargo.toml
crates/unison-protocol/assets/certs/: cert.der  cert.pem  private_key.pem
crates/unison-protocol/benches/: quic_performance.rs  throughput.rs
crates/unison-protocol/examples/: benchmark.rs  test_kdl_parse.rs  unison_ping_client.rs  unison_ping_server.rs
crates/unison-protocol/src/: lib.rs  prelude.rs
crates/unison-protocol/src/codegen/: mod.rs
crates/unison-protocol/src/core/: mod.rs
crates/unison-protocol/src/frame/: mod.rs
crates/unison-protocol/src/network/: client.rs  mod.rs
crates/unison-protocol/src/packet/: config.rs  flags.rs  header.rs  mod.rs  payload.rs  serialization.rs
crates/unison-protocol/src/parser/: schema.rs  types.rs
crates/unison-protocol/tests/: quic_integration_test.rs  simple_quic_test.rs  test_kdl.rs
crates/unison/assets/certs/: private_key.der
crates/unison/examples/: unison_ping_client.rs
crates/unison/tests/: cgp_integration_test.rs  system_stream_test.rs
design/: README.md  architecture.md  packet.md
docs/: PROTOCOL_SPEC_ja.md  README-en.md  README.md  architecture.md  quinn-stream-api-guide.md  websocket-messaging-en.md  websocket-messaging-ja.md
docs/en/: websocket-messaging.md
docs/ja/: README.md  README_ja.md  packet.md  websocket-messaging.md
examples/: benchmark.rs  test_kdl_parse.rs  unison_ping_client.rs  unison_ping_server.rs
guides/: README.md  quinn-stream-api.md
planning/: README.md
planning/architecture/: README.md
planning/discussions/: README.md
planning/rfcs/: README.md  template.md
planning/roadmap/: README.md
planning/specs/: README.md
schemas/: common.kdl  diarkis_devtools.kdl  ping_pong.kdl  unison_core.kdl
scripts/: README.md  generate_quic_certs.sh
spec/: PROTOCOL_SPEC.md  README.md
spec/01-core-concept/: SPEC.md
spec/02-protocol-rpc/: SPEC.md
spec/schemas/: unison_core.kdl
src/: lib.rs  prelude.rs
src/codegen/: mod.rs  rust.rs  typescript.rs
src/context/: adapter.rs  handlers.rs  mod.rs
src/core/: mod.rs
src/frame/: config.rs  flags.rs  header.rs  mod.rs  payload.rs  serialization.rs
src/network/: client.rs  mod.rs  quic.rs  server.rs  service.rs  websocket.rs
src/packet/: config.rs  flags.rs  header.rs  mod.rs  payload.rs  serialization.rs
src/parser/: mod.rs  schema.rs  types.rs
tests/: cgp_integration_test.rs  quic_integration_test.rs  simple_quic_test.rs  system_stream_test.rs  test_kdl.rs
