[package]
name = "unison-protocol"
version = "0.1.0-alpha2"
edition = "2024"
authors = ["Mako<mito@chronista.club>"]
description = "Type-safe communication protocol framework powered by KDL schema and QUIC transport"
keywords = ["protocol", "kdl", "quic", "streaming", "realtime"]
categories = ["network-programming", "web-programming", "api-bindings"]
license = "MIT"
homepage = "https://github.com/chronista-club/unison-protocol"
repository = "https://github.com/chronista-club/unison-protocol"
readme = "README.md"
exclude = [
    "assets/certs/*.pem",
    "assets/certs/*.der",
    ".github/*",
    "docs/*",
    "benches/*",
    "tests/*"
]
rust-version = "1.85"

[dependencies]
miette = { version = "7.2", features = ["fancy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
convert_case = "0.6"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# QUIC support
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
rust-embed = { version = "8.5", features = ["include-exclude"] }
futures-util = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Context-Generic Programming
cgp = "0.4.2"
cgp-component = "0.4.2"

# Packet module dependencies
bytes = "1.10"
rkyv = { version = "0.7", features = ["validation", "alloc", "size_32"] }
zstd = "0.13"
crc32fast = "1.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
indexmap = "2.6"

scc = "3"
tempfile = "3.13"
kdl = "6.3.4"

[build-dependencies]
kdl = "6.3.4"
miette = { version = "7.2", features = ["fancy"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
convert_case = "0.6"
anyhow = "1.0"
rcgen = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
hdrhistogram = "7.5"

[[bench]]
name = "quic_performance"
harness = false

[[bench]]
name = "throughput"
harness = false
