[package]
name = "unison-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Claude Agent SDK
claude-agent-sdk = "0.1.1"
futures = "0.3"

# Unison Protocol
unison = { path = "../unison-protocol", version = "0.1.0-alpha3" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
