[package]
name = "unison-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for Unison Protocol - schema generation, development tools, and utilities"
keywords = ["cli", "codegen", "tools", "schema", "protocol"]
categories = ["command-line-utilities", "development-tools"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true

[[bin]]
name = "unison"
path = "src/main.rs"

[dependencies]
# Core Unison
unison = { path = "../unison-protocol", version = "0.1.0-alpha3" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "color"] }

# Error handling
anyhow.workspace = true
miette.workspace = true
thiserror.workspace = true

# Utilities
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Code generation
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case.workspace = true

# Schema parsing
kdl.workspace = true
knuffel.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
