[package]
name = "unison-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Network layer implementation for Unison Protocol - QUIC transport and peer-to-peer networking"
keywords = ["network", "quic", "p2p", "transport", "realtime"]
categories = ["network-programming"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
# Core Unison
unison = { path = "../unison-protocol", version = "0.1.0-alpha3" }

# Async runtime
tokio.workspace = true
futures-util.workspace = true

# QUIC support
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
tracing.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
